--- a/Designer/Interface/Data/TypeEditor.xaml
+++ b/Designer/Interface/Data/TypeEditor.xaml
@@ -1,22 +1,25 @@
-﻿<ContentControl x:Class="WCFArchitect.Interface.Data.TypeEditor"
+﻿<ContentControl x:Class="WCFArchitect.Interface.Data.TypeEditor" x:ClassModifier="internal"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:pc="http://schemas.propsectivesoftware.com/pc"
-	xmlns:Projects="clr-namespace:WCFArchitect.Projects"
+	xmlns:Projects="clr-namespace:WCFArchitect.Projects;assembly=WCFArchitect.Projects"
+	xmlns:Data="clr-namespace:WCFArchitect.Interface.Data"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-    mc:Ignorable="d" d:DesignWidth="1000"
-	DataContext="{Binding RelativeSource={RelativeSource Self}}" >
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" mc:Ignorable="d" d:DesignWidth="1000" >
 	<ContentControl.Resources>
 		<ResourceDictionary>
 			<ResourceDictionary.MergedDictionaries>
 				
 			</ResourceDictionary.MergedDictionaries>
+			<Data:DataScopeConverter x:Key="DataScopeConverter" />
+			<Data:ClassTypeConverter x:Key="ClassTypeConverter" />
+			<Data:StructTypeConverter x:Key="StructTypeConverter" />
 			<pc:BoolVisibilityConverter x:Key="BoolVisibilityConverter" />
 		</ResourceDictionary>
 	</ContentControl.Resources>
-    <Grid>
+    <Grid x:Name="BG">
 		<Grid.ColumnDefinitions>
+			<ColumnDefinition Width="Auto" />
 			<ColumnDefinition Width="Auto" />
 			<ColumnDefinition Width="Auto" />
 			<ColumnDefinition Width="Auto" />
@@ -29,32 +32,38 @@
 			<RowDefinition Height="34" />
 			<RowDefinition Height="Auto" />
 		</Grid.RowDefinitions>
-		<ComboBox Grid.Column="0" Margin="5" Width="120">
+		<ComboBox x:Name="Scope" Grid.Column="0" Margin="5" Width="120" SelectedIndex="{Binding Path=OpenType.Scope, Converter={StaticResource DataScopeConverter}, FallbackValue='-1', TargetNullValue='-1'}" IsEnabled="{Binding Path=IsEnabled, RelativeSource={RelativeSource AncestorType={x:Type ContentControl}}}" >
 			<ComboBoxItem IsSelected="True">Public</ComboBoxItem>
 			<ComboBoxItem>Protected</ComboBoxItem>
 			<ComboBoxItem>Internal</ComboBoxItem>
 			<ComboBoxItem>Protected Internal</ComboBoxItem>
 			<ComboBoxItem>Private</ComboBoxItem>
 		</ComboBox>
-		<CheckBox IsChecked="{Binding Path=Type.IsPartial}" Grid.Column="1" Content="Partial" Margin="5" />
-		<CheckBox x:Name="IsAbstract" IsChecked="{Binding Path=Type.IsAbstract}" Grid.Column="2" Content="Abstract" Margin="5" />
-		<RadioButton x:Name="ClassType" Grid.Column="3" Content="Class" Margin="5" Checked="ClassType_Checked" />
-		<RadioButton x:Name="StructType" Grid.Column="4" Content="Struct" Margin="5" Checked="StructType_Checked" />
-		<pc:TextBox Text="{Binding Path=TypeName}" Grid.Column="5" LabelText="Name" Margin="5" />
-		<Button x:Name="AddInheritedType" Content="Add Inherited Type" Grid.Column="6" Margin="5" Visibility="{Binding Path=IsKeyboardFocusWithin, Converter={StaticResource BoolVisibilityConverter}}" Click="AddInheritedType_Click" />
-		<ListBox x:Name="InheritedTypes" Grid.Row="1" Grid.ColumnSpan="7" ItemsSource="{Binding Path=Type.InheritedTypes}" Margin="5" Padding="0" Background="Transparent" BorderBrush="{StaticResource DefaultBorderColor}" Visibility="{Binding Path=IsKeyboardFocusWithin, Converter={StaticResource BoolVisibilityConverter}}" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Auto"> 
+		<CheckBox IsChecked="{Binding Path=OpenType.Partial, FallbackValue=False}" Grid.Column="1" Content="Partial" Margin="5" IsEnabled="{Binding Path=IsEnabled, RelativeSource={RelativeSource AncestorType={x:Type ContentControl}}}" />
+		<CheckBox x:Name="Abstract" IsChecked="{Binding Path=OpenType.Abstract, FallbackValue=False}" Grid.Column="2" Content="Abstract" Margin="5" IsEnabled="{Binding Path=IsEnabled, RelativeSource={RelativeSource AncestorType={x:Type ContentControl}}}" Checked="Abstract_Checked" Unchecked="Abstract_Unchecked" />
+		<CheckBox x:Name="Sealed" IsChecked="{Binding Path=OpenType.Sealed, FallbackValue=False}" Grid.Column="3" Content="Sealed" Margin="5" IsEnabled="{Binding Path=IsEnabled, RelativeSource={RelativeSource AncestorType={x:Type ContentControl}}}" Checked="Sealed_Checked" Unchecked="Sealed_Unchecked" />
+		<RadioButton IsChecked="{Binding Path=OpenType.TypeMode, Converter={StaticResource ClassTypeConverter}}" Grid.Column="4" Content="Class" Margin="5" Visibility="{Binding Path=CanSetType, Converter={StaticResource BoolVisibilityConverter}, ConverterParameter='True'}" IsEnabled="{Binding Path=IsEnabled, RelativeSource={RelativeSource AncestorType={x:Type ContentControl}}}" Checked="ClassType_Checked" />
+		<RadioButton IsChecked="{Binding Path=OpenType.TypeMode, Converter={StaticResource StructTypeConverter}}" Grid.Column="5" Content="Struct" Margin="5" Visibility="{Binding Path=CanSetType, Converter={StaticResource BoolVisibilityConverter}, ConverterParameter='True'}" IsEnabled="{Binding Path=IsEnabled, RelativeSource={RelativeSource AncestorType={x:Type ContentControl}}}" Checked="StructType_Checked" />
+		<pc:TextBox Text="{Binding Path=OpenType.Name, FallbackValue='', UpdateSourceTrigger=PropertyChanged}" Grid.Column="6" LabelText="Name" Margin="5" IsEnabled="{Binding Path=IsEnabled, RelativeSource={RelativeSource AncestorType={x:Type ContentControl}}}" />
+		<Button Content="Add Inherited Type" Grid.Column="7" Margin="5" Visibility="{Binding Path=IsKeyboardFocusWithin, Converter={StaticResource BoolVisibilityConverter}, RelativeSource={RelativeSource AncestorType={x:Type ContentControl}}}" IsEnabled="{Binding Path=IsEnabled, RelativeSource={RelativeSource AncestorType={x:Type ContentControl}}}" Click="AddInheritedType_Click" />
+		<ListBox x:Name="InheritedTypes" Grid.Row="1" Grid.ColumnSpan="8" ItemsSource="{Binding Path=OpenType.InheritedTypes}" Margin="5" Padding="0" Background="Transparent" BorderBrush="{StaticResource DefaultBorderColor}" Visibility="{Binding Path=IsKeyboardFocusWithin, Converter={StaticResource BoolVisibilityConverter}, RelativeSource={RelativeSource AncestorType={x:Type ContentControl}}}" IsEnabled="{Binding Path=IsEnabled, RelativeSource={RelativeSource AncestorType={x:Type ContentControl}}}" ItemContainerStyle="{StaticResource StretchedContainerStyle}" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Disabled"> 
+			<ListBox.ItemsPanel>
+				<ItemsPanelTemplate>
+					<StackPanel Orientation="Horizontal" IsItemsHost="True" />
+				</ItemsPanelTemplate>
+			</ListBox.ItemsPanel>
 			<ListBox.ItemTemplate>
 				<DataTemplate DataType="Projects:DataType">
 					<Border Name="BG" Background="Transparent" BorderBrush="Transparent" BorderThickness="1" CornerRadius="0">
 						<Grid>
 							<Grid.ColumnDefinitions>
-								<ColumnDefinition Width="*" MinWidth="230" />
+								<ColumnDefinition Width="*" />
 								<ColumnDefinition Width="20" />
 							</Grid.ColumnDefinitions>
 							<Grid.RowDefinitions>
 								<RowDefinition Height="22" />
 							</Grid.RowDefinitions>
-							<TextBlock Name="DataTypeName" Text="{Binding Path=Name}" Grid.Column="0" Margin="3,0,0,0" VerticalAlignment="Center" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="{StaticResource DefaultFontSize}" />
+							<TextBlock Name="DataTypeName" Text="{Binding Path=Name}" Grid.Column="0" Margin="3,0" VerticalAlignment="Center" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="{StaticResource DefaultFontSize}" />
 							<Button Name="DeleteSelectedInheritedType" Grid.Column="1" Grid.RowSpan="2" Margin="0" Click="DeleteSelectedInheritedType_Click" Padding="0" Visibility="Hidden" Background="Transparent">
 								<Image Source="pack://application:,,,/WCFArchitect;component/Icons/X16/Delete.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
 							</Button>
