--- a/Designer/Interface/Navigator.xaml
+++ b/Designer/Interface/Navigator.xaml
@@ -29,16 +29,16 @@
 					<TextBlock Text="{Binding Path=Project.Name}" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="16pt" VerticalAlignment="Center" />
 				</StackPanel>
 				<StackPanel Orientation="Horizontal">
-					<Button x:Name="NewItem" Background="Transparent" Width="40" Padding="0" Click="NewItem_Click" >
+					<Button x:Name="NewItem" Background="Transparent" Width="40" Padding="0" Click="NewItem_Click" ToolTip="New Item" >
 						<Image Source="pack://application:,,,/WCFArchitect;component/Icons/X32/NewItem.png" Width="32" Height="32" Stretch="None" HorizontalAlignment="Left" VerticalAlignment="Center" />
 					</Button>
-					<Button x:Name="SaveProject" Background="Transparent" Width="38" Padding="0" Click="SaveProject_Click" >
+					<Button x:Name="SaveProject" Background="Transparent" Width="38" Padding="0" Click="SaveProject_Click" ToolTip="Save Project" >
 						<Image Source="pack://application:,,,/WCFArchitect;component/Icons/X32/Save.png" Width="32" Height="32" Stretch="None" HorizontalAlignment="Left" VerticalAlignment="Center" />
 					</Button>
-					<Button x:Name="BuildProject" Background="Transparent" Width="38" Padding="0" Click="BuildProject_Click" >
+					<Button x:Name="BuildProject" Background="Transparent" Width="38" Padding="0" Click="BuildProject_Click" ToolTip="Build Project" >
 						<Image Source="pack://application:,,,/WCFArchitect;component/Icons/X32/BuildSolution.png" Width="32" Height="32" Stretch="None" HorizontalAlignment="Left" VerticalAlignment="Center" />
 					</Button>
-					<Button x:Name="DeleteProject" Background="Transparent" Width="38" Padding="0" Click="DeleteProject_Click" >
+					<Button x:Name="DeleteProject" Background="Transparent" Width="38" Padding="0" Click="DeleteProject_Click" ToolTip="Remove Project from Solution" >
 						<Image Source="pack://application:,,,/WCFArchitect;component/Icons/X32/Delete.png" Width="32" Height="32" Stretch="None" HorizontalAlignment="Left" VerticalAlignment="Center" />
 					</Button>
 				</StackPanel>
